<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SkyVPN</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="connecting">CONNECTING...</string>
    <string name="wait">PLEASE WAIT...</string>
    <string name="auth">AUTHENTICATING...</string>
    <string name="config">GETTING CONFIG...</string>
    <string name="assign_ip">ASSIGNING IP...</string>
    <string name="recon">RECONNECTING...</string>
    <string name="cpu_cooler">CPU Cooler</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="phone_booster">Phone Booster</string>
    <string name="server_list">Server List</string>
    <string name="go_premium">Go Premium</string>
    <string name="select_server">Select Server</string>
    <string name="change_language">Change Language</string>
    <string name="paused">PAUSED</string>
    <string name="nonetwork">NO NETWORK</string>
    <string name="batterysavertxt">Optimize your battery for longer usage.</string>
    <string name="overheated">Overheated</string>
    <string name="apps_are_causing_problem_hit_cool_down">Apps are causing problem, hit cool down</string>
    <string name="ext_battery">Extend Battery Life</string>
    <string name="created_by">Created by SkySoftLK</string>
    <string name="extended_battery_life">Extended Battery Life</string>
    <string name="tech_one_month">$0.00 / Month</string>
    <string name="tech_three_months">$0.00 / 3 Months</string>
    <string name="tech_six_months">$0.00 / 6 Months</string>
    <string name="tech_twelve_months">$0.00 / 12 Months</string>
    <string name="default_speed">0.0 B/s</string>
    <string name="select_country">Select Country</string>
    <string name="optimal_server">Optimal Server</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="default_ip">0.0.0.0</string>
    <string name="vpn_privacy_tagline">Private, fast and ready when you are</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="connection_hint">Choose a location and start a secure VPN session.</string>
    <string name="session_time">Session time</string>
    <string name="server_location">Server location</string>
    <string name="your_ip_address">Your IP address</string>
    <string name="nav_header_title">SkyVPN</string>
    <string name="version">Version 1.0.0</string>
    <string name="support_email_subject">Support Request</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="MBps">MB/s</string>
    <string name="Mbps">Mbps</string>
    <string name="kBps">kB/s</string>
    <string name="kbps">kbps</string>
    <string name="dash">-</string>
    <string name="plus99">99+</string>
    <string name="privacy_policy_link">https://skyvpnapp-79a4c.web.app/privacy-policy</string>
    <string name="support_email">support@indratech.in</string>
    <string name="support_email_extra_text">Sent from SkyVPN Android App</string>
</resources>
