<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">




    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_servers"
            android:icon="@drawable/ic_locations"
            android:title="Select Server" />

        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_crown"
            android:title="Go Premium" />

        <item
            android:id="@+id/nav_helpus"
            android:icon="@drawable/ic_paper_plane"
            android:title="@string/support_email_subject" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_love"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />


        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

    </group>

</menu>
